[package]
name = "master-project-queuing-port"
version = "0.1.0"
edition = "2021"
description = "Queuing Port Implementation in Rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

[features]
default = ["std"]
std = []
no-std = []

[dev-dependencies]
